--- a/helm/test-devops/values-dev.yaml
+++ b/helm/test-devops/values-dev.yaml
@@ -113,3 +113,23 @@ prometheus:
     interval: 30s
     scrapeTimeout: 10s
     additionalLabels: {}
+
+# =============================================================================
+# Vault Configuration
+# =============================================================================
+
+vault:
+  enabled: true
+  address: "https://vault-devops.extosoft.app"
+  skipTLSVerify: "true"
+  roleName: "k8s-app"
+  serviceAccount: "vault-auth"
+  secrets:
+    secretPath: "secret/data/k8s/test-devops-dev"
+    fields:
+      port: "PORT"
+      serviceName: "SERVICE_NAME"
+      nodeEnv: "NODE_ENV"
+      enableMetrics: "ENABLE_METRICS"
+      ddDogstatsdPort: "DD_DOGSTATSD_PORT"
+      ddAgentHost: "DD_AGENT_HOST"
